<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <!-- Glass Background Circle -->

    <!-- Water Drop Icon -->
    <View
        android:id="@+id/glassCircle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/splash_glass_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <ImageView
        android:id="@+id/splashIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_water_drop"
        android:contentDescription="@string/app_logo"
        app:tint="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/glassCircle"
        app:layout_constraintBottom_toBottomOf="@id/glassCircle"
        app:layout_constraintStart_toStartOf="@id/glassCircle"
        app:layout_constraintEnd_toEndOf="@id/glassCircle"/>

    <!-- App Name -->
    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/glassCircle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Subtitle -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:textColor="#CCFFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/appNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Loading Indicator -->
    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:indeterminateTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>